tests/additional/fail/op_not.mvm
double x;

x = 3.4;
print(!x);
